8203817: Monitor::try_lock() should not call check_prelock_state()

Reviewed-by: dholmes, eosterlund, rehn